k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sniplink-ingress
  namespace: sniplink
  labels:
    app.kubernetes.io/name: sniplink
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Analytics Microservice API
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3002
          # Shortener Microservice API (URL creation & listings)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shortener-service
                port:
                  number: 3001
          # Frontend Dashboard (Static SPA assets)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
